--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@prisma/client": "^5.19.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.1",
@@ -24,7 +27,9 @@
     "next": "^14.2.11",
     "next-auth": "^4.24.7",
     "react": "^18",
+    "react-color": "^2.19.3",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "resend": "^4.0.0",
     "tailwind-merge": "^2.5.2",
     "tailwind-scrollbar": "^3.1.0",
@@ -35,6 +40,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-color": "^3.0.12",
     "@types/react-dom": "^18",
     "bcrypt": "^5.1.1",
     "eslint": "^8",
