--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "tailwind-merge": "^2.5.2",
     "tailwind-scrollbar": "^3.1.0",
     "use-debounce": "^10.0.3",
+    "uuid": "^10.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -42,6 +43,7 @@
     "@types/react": "^18",
     "@types/react-color": "^3.0.12",
     "@types/react-dom": "^18",
+    "@types/uuid": "^10.0.0",
     "bcrypt": "^5.1.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.11",
