--- a/package.json
+++ b/package.json
@@ -12,27 +12,38 @@
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@hookform/resolvers": "^3.9.0",
     "@prisma/client": "^5.19.1",
+    "@radix-ui/react-alert-dialog": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.2",
     "@react-email/components": "^0.0.25",
     "@vercel/edge-config": "^1.3.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "happyclient": "file:",
     "jose": "^5.9.2",
     "lucide-react": "^0.441.0",
     "mongodb": "^6.9.0",
     "next": "^14.2.11",
-    "next-auth": "^4.24.7",
+    "next-auth": "^4.24.8",
+    "node-fetch": "^3.3.2",
     "react": "^18",
     "react-color": "^2.19.3",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "resend": "^4.0.0",
-    "tailwind-merge": "^2.5.2",
+    "tailwind-merge": "^2.5.3",
     "tailwind-scrollbar": "^3.1.0",
+    "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.3",
     "uuid": "^10.0.0",
     "zod": "^3.23.8"
