--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
-    "crons":[
+    "crons": [
         {
-            "path": "api/cron",
+            "path": "/api/cron",
             "schedule": "0 7 * * *"
         }
     ]
